    setting up an incorrect bitmap of starting bytes, but fortunately it could 
    not have actually happened in practice until change 8 above was made (it 
    added property types that matched character-matching opcodes).
    
14. pcre_study() now recognizes \h, \v, and \R when constructing a bit map of 
    possible starting bytes for non-anchored patterns. 
    
15. The "auto-possessify" feature of pcre_compile() now recognizes \R. 

16. If a repeated Unicode property match (e.g. \p{Lu}*) was used with non-UTF-8
    input, it could crash or give wrong results if characters with values 
    greater than 0xc0 were present in the subject string. (Detail: it assumed 
    UTF-8 input when processing these items.)
    
17. Added a lot of (int) casts to avoid compiler warnings in systems where
    size_t is 64-bit.
    
18. Added a check for running out of memory when PCRE is compiled with
    --disable-stack-for-recursion. 
 


Version 8.02 19-Mar-2010
------------------------

1.  The Unicode data tables have been updated to Unicode 5.2.0.

2.  Added the option --libs-cpp to pcre-config, but only when C++ support is
    configured.

3.  Updated the licensing terms in the pcregexp.pas file, as agreed with the
    original author of that file, following a query about its status.

4.  On systems that do not have stdint.h (e.g. Solaris), check for and include
    inttypes.h instead. This fixes a bug that was introduced by change 8.01/8.

5.  A pattern such as (?&t)*+(?(DEFINE)(?<t>.)) which has a possessive
    quantifier applied to a forward-referencing subroutine call, could compile
    incorrect code or give the error "internal error: previously-checked
    referenced subpattern not found".

6.  Both MS Visual Studio and Symbian OS have problems with initializing
    variables to point to external functions. For these systems, therefore,
    pcre_malloc etc. are now initialized to local functions that call the
    relevant global functions.
