@@ -58,7 +58,9 @@ Version 8.10 03 May-2010
 14. pcre_study() now recognizes \h, \v, and \R when constructing a bit map of 
     possible starting bytes for non-anchored patterns. 
     
-15. The "auto-possessify" feature of pcre_compile() now recognizes \R. 
+15. Extended the "auto-possessify" feature of pcre_compile(). It now recognizes
+    \R, and also a number of cases that involve Unicode properties, both 
+    explicit and implicit when PCRE_UCP is set.
 
 16. If a repeated Unicode property match (e.g. \p{Lu}*) was used with non-UTF-8
     input, it could crash or give wrong results if characters with values 
@@ -70,7 +72,7 @@ Version 8.10 03 May-2010
     
 18. Added a check for running out of memory when PCRE is compiled with
     --disable-stack-for-recursion. 
- 
+    
 
 
 Version 8.02 19-Mar-2010
